[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/characters/Character Scene/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/characters/Test Enemy/Test Enemy Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/characters/Test Enemy/test_enemy.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/on_ground/walk.gd" type="Script" id=4]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/in_air/fall.gd" type="Script" id=5]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/in_air/jump.gd" type="Script" id=6]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/on_ground/ground_cast.gd" type="Script" id=7]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/in_air/air_cast.gd" type="Script" id=8]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/on_ground/idle.gd" type="Script" id=9]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/other/death.gd" type="Script" id=10]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/other/void.gd" type="Script" id=11]
[ext_resource path="res://scenes/characters/Test Enemy/enemy_states/enemy_state_machine.gd" type="Script" id=12]
[ext_resource path="res://scenes/characters/Test Enemy/resources/animation resources/cast_glow.tres" type="Material" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Casting"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/cast_position/cast_glow:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 0.5, 1, 0.8, 1, 0.8, 1, 0.8 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.1, 0.1, 0.1 ), Vector3( 0.05, 0.05, 0.05 ), Vector3( 0.15, 0.15, 0.15 ), Vector3( 0.1, 0.1, 0.1 ), Vector3( 0.2, 0.2, 0.2 ), Vector3( 0.19, 0.19, 0.19 ) ]
}

[sub_resource type="SphereMesh" id=2]

[node name="Black Pill Enemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="0"]
anims/Casting = SubResource( 1 )

[node name="State_Machine" parent="." index="2"]
script = ExtResource( 12 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="State_Machine" index="0"]
script = ExtResource( 9 )

[node name="Walk" type="Node" parent="State_Machine" index="1"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="State_Machine" index="2"]
script = ExtResource( 6 )

[node name="Fall" type="Node" parent="State_Machine" index="3"]
script = ExtResource( 5 )

[node name="Ground_Cast" type="Node" parent="State_Machine" index="4"]
script = ExtResource( 7 )

[node name="Air_Cast" type="Node" parent="State_Machine" index="5"]
script = ExtResource( 8 )

[node name="Death" type="Node" parent="State_Machine" index="6"]
script = ExtResource( 10 )

[node name="Void" type="Node" parent="State_Machine" index="7"]
script = ExtResource( 11 )

[node name="CollisionShape" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, -4.20504e-08, 1, 0, -0.962, -4.37114e-08, 0, 0.0310001, 0 )

[node name="Rig" parent="." index="5" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )

[node name="cast_position" type="Position3D" parent="Rig" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1.4 )

[node name="cast_glow" type="MeshInstance" parent="Rig/cast_position" index="0"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 13 )
[connection signal="ai_input_changed" from="." to="Camera_Rig" method="_on_Character_ai_input_changed"]
